clusters/main/kubernetes/apps/continuwuity/app/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: continuwuity-main
  namespace: continuwuity
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 200"]
spec:
  parentRefs:
    - name: envoy-external
      namespace: envoy
      sectionName: https
  hostnames:
    - "matrix.${INGRESS_URL}"
  rules:
    - backendRefs:
        - name: continuwuity-app-template
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: continuwuity-fed
  namespace: continuwuity
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 200"]
spec:
  parentRefs:
    - name: envoy-external
      namespace: envoy
      sectionName: https
  hostnames:
    - "matrix-fed.${INGRESS_URL}"
  rules:
    - backendRefs:
        - name: continuwuity-app-template
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: continuwuity-well-known
  namespace: continuwuity
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 200"]
      url: "https://${INGRESS_URL}/.well-known/matrix/client"
spec:
  parentRefs:
    - name: envoy-external
      namespace: envoy
      sectionName: https
  hostnames:
    - "${INGRESS_URL}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/matrix/
      backendRefs:
        - name: continuwuity-app-template
          port: 80
---
